# rust-catan

./: .gitignore
catan/: Cargo.toml
catan-player/: Cargo.toml
catan/src/board/layout/: layout.rs
catan/src/board/setup/: random_default.rs
catan/src/board/utils/: transform.rs
catan/src/game/: apply.rs  legal.rs  mod.rs
catan/src/player/: randomy.rs
pycatan/: Cargo.toml
pycatan/src/: environment.rs  lib.rs  py_catan_observation.rs  py_observation_format.rs
