[package]
name = "pycatan"
version = "0.1.2"
authors = ["Quentin Gendre <swynfel@gmail.com>"]
edition = "2018"

[lib]
name = "pycatan"
crate-type = ["cdylib"]

[dependencies.catan]
path = "../catan"

[dependencies.pyo3]
version = "0.25"
features = ["extension-module"]

[dependencies.numpy]
version = "0.25"

[dependencies.ndarray]
version = "0.16"

[dependencies.rand]
version = "0.9"
features = ["small_rng"]
